# klukai

./: Cargo.toml  README.md  release-plz.toml  rust-toolchain.toml
.github/workflows/: cd.yml  ci.yml
crates/corro-agent/: Cargo.toml
crates/corro-agent/src/: lib.rs  quinn_plaintext.rs  transport.rs
crates/corro-agent/src/agent/: bi.rs  handlers.rs  mod.rs  run_root.rs  setup.rs  tests.rs  uni.rs  util.rs
crates/corro-agent/src/api/peer/: mod.rs
crates/corro-agent/src/api/public/: mod.rs  pubsub.rs  update.rs
crates/corro-agent/src/broadcast/: mod.rs
crates/corro-api-types/src/: lib.rs
crates/corro-client/: Cargo.toml
crates/corro-client/src/: lib.rs  sub.rs
crates/corro-pg/src/: lib.rs
crates/corro-pg/src/vtab/: pg_database.rs
crates/corro-tests/: Cargo.toml
crates/corro-tests/src/: lib.rs
crates/corro-types/: Cargo.toml
crates/corro-types/src/: agent.rs  api.rs  base.rs  broadcast.rs  change.rs  lib.rs  pubsub.rs  schema.rs  sqlite.rs  updates.rs
crates/corro-types/src/tripwire/: mod.rs  preempt.rs  tripwire.rs
crates/corrosion/: Cargo.toml
crates/corrosion/src/: admin.rs  main.rs
crates/corrosion/src/command/: agent.rs  mod.rs  reload.rs  tpl.rs
crates/corrosion/src/tpl/: mod.rs
crates/klukai/: CHANGELOG.md  Cargo.toml
crates/klukai-agent/: CHANGELOG.md  Cargo.toml
crates/klukai-agent/src/: lib.rs  quinn_plaintext.rs  transport.rs
crates/klukai-agent/src/agent/: bi.rs  bootstrap.rs  error.rs  handlers.rs  metrics.rs  mod.rs  run_root.rs  setup.rs  tests.rs  uni.rs  util.rs
crates/klukai-agent/src/api/peer/: mod.rs
crates/klukai-agent/src/api/public/: mod.rs  pubsub.rs  update.rs
crates/klukai-agent/src/broadcast/: mod.rs
crates/klukai-client/: CHANGELOG.md  Cargo.toml
crates/klukai-client/src/: lib.rs  sub.rs
crates/klukai-devcluster/: Cargo.toml
crates/klukai-devcluster/src/: main.rs
crates/klukai-devcluster/src/topology/: mod.rs
crates/klukai-tests/: Cargo.toml
crates/klukai-tests/src/: lib.rs
crates/klukai-types/: CHANGELOG.md  Cargo.toml
crates/klukai-types/src/: actor.rs  agent.rs  api.rs  backoff.rs  base.rs  broadcast.rs  change.rs  channel.rs  config.rs  lib.rs  members.rs  pubsub.rs  schema.rs  spawn.rs  sqlite.rs  sqlite3_restore.rs  sync.rs  tls.rs  updates.rs
crates/klukai-types/src/consul/: mod.rs
crates/klukai-types/src/sqlite_pool/: config.rs  mod.rs
crates/klukai-types/src/tripwire/: mod.rs  preempt.rs
crates/klukai/src/: admin.rs  main.rs
crates/klukai/src/command/: agent.rs  reload.rs  tls.rs  tpl.rs
crates/klukai/src/command/consul/: sync.rs
crates/klukai/src/tpl/: mod.rs
crates/sqlite3-restore/: Cargo.toml
integration-tests/: Cargo.toml
integration-tests/tests/: cli_test.rs
