[workspace]
members = ["crates/*", "integration-tests"]
resolver = "2"

[workspace.package]
authors = ["Justin Duch <justin@duch.me>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/halcyonnouveau/klukai"
homepage = "https://github.com/halcyonnouveau/klukai"

[workspace.dependencies]
klukai-types = { version = "0.1.0", path = "crates/klukai-types" }
klukai-client = { version = "0.1.0", path = "crates/klukai-client" }
klukai-agent = { version = "0.1.0", path = "crates/klukai-agent" }
klukai-tests = { path = "crates/klukai-tests" }

arc-swap = "1.7"
antithesis_sdk = { version = "0.2", default-features = false }
assert2 = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["http2", "ws", "tracing"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
headers = "0.4"
deadpool = "0.10.0"
deadpool-sqlite = "0.6.0"
bincode = "2.0"
build-info = "0.0.41"
build-info-build = "0.0.41"
bytes = "1.10"
camino = { version = "1.1", features = ["serde1"] }
circular-buffer = "0.1.5"
clap = { version = "4.2.4", features = ["derive"] }
compact_str = { version = "0.7.0", "features" = ["serde"] }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
crc32fast = "1.5"
csv = "1.3"
enquote = "1.1"
eyre = "0.6"
fallible-iterator = "0.3"
foca = { version = "0.19", features = [
    "std",
    "tracing",
    "bincode-codec",
    "serde",
] }
futures = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
hostname = "0.3.1"
http-body = "0.4.5"
http-body-util = "0.1.2"
hyper = { version = "1.7", features = ["http1", "http2", "server", "client"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
indexmap = { version = "2.1.0", features = ["serde"] }
itertools = { version = "0.10.5" }
metrics = "0.22.0"
metrics-exporter-prometheus = { version = "0.13.0", default-features = false, features = [
    "http-listener",
] }
metrics-util = { version = "0.16.0" }
nix = { version = "0.30", features = ["fs"] }
nom = "7.0"
notify = { version = "6.0.1", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-mini = { version = "0.3.0", default-features = false }
once_cell = "1.21"
opentelemetry = { version = "0.30", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.30"
parking_lot = { version = "0.12.1" }
pin-project-lite = "0.2.9"
quinn = "0.11"
quinn-proto = "0.11"
quoted-string = "0.6"
rand = { version = "0.9", features = ["small_rng"] }
rangemap = { version = "1.5.1", features = ["serde1"] }
rcgen = { version = "0.14", features = [
    "x509-parser",
    "aws_lc_rs",
    "crypto",
    "pem",
], default-features = false }
rhai = { version = "1.22", features = ["sync"] }
rhai-tpl = { version = "0.1" }
rusqlite = { version = "0.37", features = [
    "serde_json",
    "time",
    "bundled",
    "uuid",
    "array",
    "load_extension",
    "column_decltype",
    "vtab",
    "functions",
    "chrono",
    "series",
    "trace",
] }
rustls = "0.23"
rustls-pki-types = "1.12"
rustls-pemfile = "2.2"
seahash = "4.1"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "2.3.2"
shell-words = "1.1"
shellwords = "1.1"
smallvec = { version = "1.15", features = ["serde", "write", "union"] }
speedy = { version = "0.8", features = ["uuid", "smallvec", "indexmap"] }
sqlite3-parser = "0.12.0"
strum = { version = "0.24.1", features = ["derive"] }
tempfile = "3.5.0"
thiserror = "1.0.40"
tikv-jemallocator = "0.5"
time = { version = "0.3.15", features = ["macros", "serde-well-known"] }
tokio = { version = "1.41", features = ["full"] }
tokio-metrics = "0.3.0"
tokio-serde = { version = "0.8", features = ["json"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tokio-util = { version = "0.7.7", features = ["io", "codec", "net"] }
tower = { version = "0.5", features = ["limit", "load-shed", "buffer"] }
tower-http = { version = "0.6", features = ["trace", "auth"] }
tracing = "0.1"
tracing-filter = { version = "0.1.0-alpha.2", features = ["smallvec"] }
tracing-opentelemetry = { version = "0.31", default-features = false, features = [
    "tracing-log",
] }
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
hickory-resolver = "0.24"
uhlc = { version = "0.7", features = ["defmt"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
webpki = { version = "0.22.0", features = ["std"] }
http = { version = "1.3" }
governor = { version = "0.7.0" }

[profile.release]
debug = 1
incremental = true

[profile.dev]
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
debug = false
opt-level = 3
codegen-units = 16

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.test.package.backtrace]
# backtraces are super expensive to compute in development,
# always optimize that crate
opt-level = 2
