[workspace]
members = ["crates/*", "integration-tests"]
resolver = "2"

[workspace.package]
authors = ["Justin Duch <justin@duch.me>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/halcyonnouveau/klukai"
homepage = "https://github.com/halcyonnouveau/klukai"

[workspace.dependencies]
# Workspace crates
klukai-agent = { version = "0.1.3", path = "crates/klukai-agent" }
klukai-client = { version = "0.2.2", path = "crates/klukai-client" }
klukai-tests = { path = "crates/klukai-tests" }
klukai-types = { version = "0.3.0", path = "crates/klukai-types" }

# Async runtime and utilities
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.41", features = ["full"] }
tokio-metrics = "0.4"
tokio-serde = { version = "0.8", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io", "codec", "net"] }

# Web framework and HTTP
axum = { version = "0.8", features = ["http2", "ws", "tracing"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
headers = "0.4"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["http1", "http2", "server", "client"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
tower = { version = "0.5", features = ["limit", "load-shed", "buffer"] }
tower-http = { version = "0.6", features = ["trace", "auth"] }

# Networking and protocols
foca = { version = "0.19", features = [
    "std",
    "tracing",
    "bincode-codec",
    "serde",
] }
governor = "0.10"
hickory-resolver = "0.25"
quinn = "0.11"
quinn-proto = "0.11"

# Database
deadpool = "0.12"
deadpool-sqlite = "0.12"
rusqlite = { version = "0.37", features = [
    "serde_json",
    "time",
    "bundled",
    "uuid",
    "array",
    "load_extension",
    "column_decltype",
    "vtab",
    "functions",
    "chrono",
    "series",
    "trace",
] }
sqlite3-parser = "0.15"

# Cryptography and security
rcgen = { version = "0.14", features = [
    "x509-parser",
    "aws_lc_rs",
    "crypto",
    "pem",
], default-features = false }
rustls = "0.23"
rustls-pemfile = "2.2"
rustls-pki-types = "1.12"
webpki = { version = "0.22", features = ["std"] }

# Serialization
bincode = "2.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "3.14"
speedy = { version = "0.8", features = ["uuid", "smallvec", "indexmap"] }

# Observability and tracing
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = [
    "http-listener",
] }
metrics-util = "0.20"
opentelemetry = { version = "0.30", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "trace"] }
tracing = "0.1"
tracing-filter = { version = "0.1.0-alpha.2", features = ["smallvec"] }
tracing-opentelemetry = { version = "0.31", default-features = false, features = [
    "tracing-log",
] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Data structures and utilities
arc-swap = "1.7"
bytes = "1.10"
camino = { version = "1.1", features = ["serde1"] }
circular-buffer = "1.1"
compact_str = { version = "0.9", "features" = ["serde"] }
crc32fast = "1.5"
fallible-iterator = "0.3"
hex = "0.4"
indexmap = { version = "2.11", features = ["serde"] }
itertools = "0.14"
once_cell = "1.21"
parking_lot = "0.12"
pin-project-lite = "0.2"
rand = { version = "0.9", features = ["small_rng"] }
rangemap = { version = "1.6", features = ["serde1"] }
seahash = "4.1"
smallvec = { version = "1.15", features = ["serde", "write", "union"] }
time = { version = "0.3", features = ["macros", "serde-well-known"] }
uhlc = { version = "0.7", features = ["defmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
enquote = "1.1"
hostname = "0.4"
shell-words = "1.1"
shellwords = "1.1"
strum = { version = "0.27", features = ["derive"] }

# File I/O and system
csv = "1.3"
nix = { version = "0.30", features = ["fs"] }
notify = { version = "8.2", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-mini = { version = "0.7", default-features = false }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tempfile = "3.21"

# Error handling and parsing
eyre = "0.6"
nom = "7.0"
quoted-string = "0.6"
thiserror = "2.0"

# Memory allocation and build tools
build-info = "0.0.41"
build-info-build = "0.0.41"
tikv-jemallocator = "0.6"

# Scripting
rhai = { version = "1.22", features = ["sync"] }
rhai-tpl = { version = "0.1" }

# Testing and development
antithesis_sdk = { version = "0.2", default-features = false }
assert2 = "0.3"

[profile.release]
debug = 1
incremental = true

[profile.dev]
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
debug = false
opt-level = 3
codegen-units = 16

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.test.package.backtrace]
# backtraces are super expensive to compute in development,
# always optimize that crate
opt-level = 2

[workspace.lints.clippy]
