[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.12"
corro-tests = { path = "../crates/corro-tests" }
corro-types = { path = "../crates/corro-types" }
escargot = "0.5.8"
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }