[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_cmd = "2.0.12"
klukai-tests = { path = "../crates/klukai-tests" }
klukai-types = { path = "../crates/klukai-types" }
escargot = "0.5.8"
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
