[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
assert_cmd = "2.0.12"
klukai-types.workspace = true
klukai-tests.workspace = true
escargot = "0.5.8"
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
