[package]
name = "corrosion"
version = "0.2.0-beta.0"
edition = "2021"

[dependencies]
antithesis_sdk = { workspace = true }
build-info = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
compact_str = { workspace = true }
config = { workspace = true }
csv = { version = "1.2.2" }
corro-agent = { path = "../corro-agent" }
corro-client = { path = "../corro-client" }
corro-types = { path = "../corro-types" }
crc32fast = { workspace = true }
enquote = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hostname = { workspace = true }
hyper = { workspace = true }
indexmap = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
notify = { version = "6.0.1", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-mini = { version = "0.3.0", default-features = false }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
rangemap = { workspace = true }
rhai = { workspace = true }
rhai-tpl = { version = "0.1.2" }
rusqlite = { workspace = true }
seahash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellwords = { version = "1" }
tempfile = { workspace = true }
thiserror = { workspace = true }
tikv-jemallocator = "0.5"
time = { workspace = true }
tokio = { workspace = true }
tokio-metrics = { workspace = true }
tokio-serde = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-filter = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
shell-words = "1.1.0"
metrics-util = { workspace = true }

[build-dependencies]
build-info-build = { workspace = true }

[dev-dependencies]
corro-tests = { path = "../corro-tests" }
