[package]
name = "klukai-agent"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent component for Klukai Corrosion"

[dependencies]
klukai-types.workspace = true

antithesis_sdk = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
compact_str = { workspace = true }
config = { workspace = true }
eyre = { workspace = true }
foca = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hickory-resolver = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
opentelemetry = { workspace = true }
parking_lot = { workspace = true }
quinn = { workspace = true }
quinn-proto = { workspace = true }
quoted-string = { workspace = true }
rand = { workspace = true }
rangemap = { workspace = true }
rusqlite = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rustls-pemfile = { workspace = true }
seahash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
speedy = { workspace = true }
sqlite3-parser = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
uhlc = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
governor.workspace = true

[dev-dependencies]
klukai-tests.workspace = true
http-body = { workspace = true }
