[package]
name = "klukai-client"
version = "0.2.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Client library for Klukai Corrosion distributed SQLite"

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
klukai-types.workspace = true
eyre = { workspace = true }
futures = { workspace = true }
hickory-resolver = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
pin-project-lite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
