[package]
name = "klukai-devcluster"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
nom = { workspace = true }
clap = { workspace = true }
