[package]
name = "klukai"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Gossip-based service discovery (and more) for large distributed systems."
readme = "../../README.md"

[[bin]]
name = "corrosion"
path = "src/main.rs"

[dependencies]
antithesis_sdk = { workspace = true }
build-info = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
compact_str = { workspace = true }
config = { workspace = true }
csv = { workspace = true }
klukai-agent.workspace = true
klukai-client.workspace = true
klukai-types.workspace = true
crc32fast = { workspace = true }
enquote = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hostname = { workspace = true }
indexmap = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
rangemap = { workspace = true }
rhai = { workspace = true }
rhai-tpl = { workspace = true }
rusqlite = { workspace = true }
seahash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellwords = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tikv-jemallocator = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-metrics = { workspace = true }
tokio-serde = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-filter = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
shell-words = { workspace = true }
metrics-util = { workspace = true }

[build-dependencies]
build-info-build = { workspace = true }

[dev-dependencies]
klukai-tests.workspace = true
